[package]
name = "ockam_ebpf"
version = "0.1.0"
authors = ["Ockam Developers"]
categories = ["network-programming"]
edition = "2021"
homepage = "https://github.com/build-trust/ockam"
keywords = ["ockam", "crypto", "p2p", "cryptography", "encryption"]
license = "Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/build-trust/ockam-ebpf"
rust-version = "1.56.0"
description = """
eBPF program used by Ockam Privileged Portals
"""

[dependencies]
aya-ebpf = { version = "0.1.0" }
aya-log-ebpf = { version = "0.1.0" }
network-types = { version = "0.0.7" }

[[bin]]
name = "ockam_ebpf"
path = "src/entrypoint.rs"
